<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/title_text"
        android:textSize="28sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardElevation="16dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:textSize="16sp"
                android:id="@+id/gratefulText"
                android:text="@string/grateful_text"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <Button
        android:textColor="@color/button_color"
        android:id="@+id/startButton"
        android:textSize="24sp"
        android:background="@android:color/transparent"
        android:text="@string/getStarted_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>